fixed bug in evaluation module

--- a/notebook/03_test_ncf_onML-1m_custMetrics_ncf_eval2.ipynb
+++ b/notebook/03_test_ncf_onML-1m_custMetrics_ncf_eval2.ipynb
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -748,23 +748,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6040/6040 [03:02<00:00, 33.17it/s]\n"
+      "100%|██████████| 6040/6040 [03:02<00:00, 33.12it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.19726011174002897, 0.8870137908313572, 0.1296010063946608)"
+       "(0.19752335551377526, 0.8868389141123876, 0.13001185821060054)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,6 +782,43 @@
     "    dataset.ratings_test\n",
     ")\n",
     "rmse,auc,logloss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.02616760516727393,\n",
+       " 0.0026167605167273927,\n",
+       " 0.011779148923791428,\n",
+       " 0.007521740616308355)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall,precision,ndcg,map2 = evaluator.getRankBasedMetrics(\n",
+    "    dataset.users_test,\n",
+    "    dataset.items_test,\n",
+    "    dataset.ratings_test\n",
+    ")\n",
+    "recall,precision,ndcg,map2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Not as good as literature reported numbers"
    ]
   },
   {
